// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ContentFloatingTocLinks > can mount component 1`] = `
"<div id="test-wrapper">
  <div>
    <transition-stub enteractiveclass="transition-all duration-100 ease-in-out" enterfromclass="opacity-0" entertoclass="opacity-100" leaveactiveclass="transition-all duration-100 ease-in-out" leavefromclass="opacity-100" leavetoclass="opacity-0" mode="out-in" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
  </div>
</div>"
`;

exports[`ContentFloatingTocLinks > renders <MContentFloatingTocLinks :links="[{id: 'id', text: 'text', depth: 1}]" :activeHeadings="['id']" /> correctly 1`] = `
"<div>
  <transition-stub enteractiveclass="transition-all duration-100 ease-in-out" enterfromclass="opacity-0" entertoclass="opacity-100" leaveactiveclass="transition-all duration-100 ease-in-out" leavefromclass="opacity-100" leavetoclass="opacity-0" mode="out-in" appear="false" persisted="false" css="true">
    <div class="space-y-4">
      <div class="flex flex-col items-end gap-1">
        <div class="h-[4px] transition-all duration-500 ease-in-out w-11 bg-accent w-12 cursor-pointer"></div>
        <!--v-if-->
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`ContentFloatingTocLinks > renders basic case correctly 1`] = `
"<div>
  <transition-stub enteractiveclass="transition-all duration-100 ease-in-out" enterfromclass="opacity-0" entertoclass="opacity-100" leaveactiveclass="transition-all duration-100 ease-in-out" leavefromclass="opacity-100" leavetoclass="opacity-0" mode="out-in" appear="false" persisted="false" css="true">
    <div class="space-y-4">
      <div class="flex flex-col items-end gap-1">
        <div class="h-[4px] transition-all duration-500 ease-in-out w-11 bg-accent w-12 cursor-pointer"></div>
        <!--v-if-->
      </div>
    </div>
  </transition-stub>
</div>"
`;
